[package]
name = "octet-zone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
clap = { version = "4.4.18", features = ["derive", "env"] }
hex = "0.4.3"
hickory-server = "0.24.0"
regex = "1.10.3"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
